--- a/main.css
+++ b/main.css
@@ -885,7 +885,7 @@ MEDIA QUERY
 
 /*MENU CURRENT LINE */
 .current-menu-item > a::before  {
-  border-bottom: solid 10px #9b2557;
+  border-bottom: solid 4px #9b2557;
 }
 
     .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
@@ -908,6 +908,9 @@ MEDIA QUERY
 }
   @media (min-width: 2000px) and (max-width:2399px) {
 
+    .current-menu-item > a::before  {
+      border-bottom: solid 5px #9b2557;
+    }
 
     .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
       border-top: 5px solid #9b2557;
