--- a/main.css
+++ b/main.css
@@ -797,6 +797,39 @@ MEDIA QUERY
  
 @media (min-width: 700px) and (max-width:999px) {
 
+  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
+    border-top: 2px solid #9b2557;
+  }
+  
+  .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+  .claniceminigrid:nth-last-child(-n+3), .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+    border-bottom: 2px solid #9b2557;
+  }
+
+
+
+ 
+
+
+/* RICH TEXT FOTKA CENTAR*/
+.w-richtext figure.w-richtext-align-floatleft {
+  width: 100%;
+  max-width: 100%;
+  text-align: center;
+  clear: both;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+  .swiper-pagination-bullet {
+    height: 2px;
+  }
+
+  .swiper-pagination {
+    display: none!important;
+}
+
 
 }
   @media (min-width: 1000px) and (max-width:1199px) {
