--- a/main.css
+++ b/main.css
@@ -759,6 +759,16 @@ MEDIA QUERY
    /* height: 18vh;*/
   }
 
+/* RICH TEXT FOTKA CENTAR*/
+.w-richtext figure.w-richtext-align-floatleft {
+  width: 100%;
+  max-width: 100%;
+  text-align: center;
+  clear: both;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
 
 
 
