--- a/main.css
+++ b/main.css
@@ -814,7 +814,7 @@ MEDIA QUERY
 
 
 /* RICH TEXT FOTKA CENTAR*/
-/* .w-richtext figure.w-richtext-align-floatleft {
+.w-richtext figure.w-richtext-align-floatleft {
   width: 100%;
   max-width: 100%;
   text-align: center;
@@ -822,7 +822,7 @@ MEDIA QUERY
   display: block;
   margin-right: auto;
   margin-left: auto;
-} */
+}
 
   .swiper-pagination-bullet {
     height: 2px;
