--- a/main.css
+++ b/main.css
@@ -1221,7 +1221,7 @@ width: 1em;
 
 
 /*HOME BOTTOM MARGIN DOKUMENTI*/
-.parent {
+#w-node-_5c565c49-4d35-3141-74dc-234310b8f725-5fb2ef26 {
   margin-bottom: 5em;
   }
   
