--- a/main.css
+++ b/main.css
@@ -975,7 +975,15 @@ MEDIA QUERY
 
   }
 
+  @media (max-width: 991px) {
+/* MOBILE MENU */
+  .open-menu {
+   
+    display: block;
+   
+  }
 
+  }
 /*
 ================================================================================
 KILL FOCUS ON ALL BUT WITH ACCESIBILITY
