--- a/main.css
+++ b/main.css
@@ -807,7 +807,11 @@ MEDIA QUERY
     border-bottom: 2px solid #9b2557;
   }
 
+  h1 {
 
+    font-size: 13vw;
+
+}
 
   /* IPAD RICH TXT FOTKA */
   .alignleft, img.alignleft, .alignone {
