--- a/main.css
+++ b/main.css
@@ -747,7 +747,7 @@ MEDIA QUERY
 
   h1 {
 
-    font-size: 12.8vw;
+    font-size: 13vw;
 
 }
 
@@ -775,8 +775,8 @@ MEDIA QUERY
 
 
 
-/*NE ZNA SE!*/
-  /* #w-node-_06947a7d-4cf2-979c-5875-64d3a71f697a-15b2ef31 {
+
+  #w-node-_06947a7d-4cf2-979c-5875-64d3a71f697a-15b2ef31 {
     -ms-grid-column-span: 5!important;
     grid-column-end: 6!important;
     -ms-grid-column: 1!important;
@@ -786,7 +786,7 @@ MEDIA QUERY
     -ms-grid-row: 4!important;
     grid-row-start: 4!important;
 }
-  */
+ 
 
 
   .swiper-pagination {
@@ -817,7 +817,7 @@ MEDIA QUERY
 
   h1 {
 
-    font-size: 12.8vw;
+    font-size: 13vw;
 
 }
 
