--- a/main.css
+++ b/main.css
@@ -523,7 +523,7 @@ outline: none;
 /* SEARCH WORDPRESS FIX */
 .search-field {
   color: #f5f4f1;
-  width:65vw;
+  width:100%;
   height: 1.3em;
   padding-right: .5em;
   border-style: solid;
