--- a/main.css
+++ b/main.css
@@ -816,11 +816,11 @@ MEDIA QUERY
     border-bottom: 2px solid #9b2557;
   }
 
-  h1 {
+/*   h1 {
 
     font-size: 12.8vw;
 
-}
+} */
 
   /* IPAD RICH TXT FOTKA */
   .alignleft, img.alignleft, .alignone {
@@ -847,10 +847,10 @@ MEDIA QUERY
 }
 
 /*SWIPER VISINA*/
-.swiper-container-gal {
+/* .swiper-container-gal {
    max-height: 52vh;
 }
-
+ */
 
 
 }
