--- a/main.css
+++ b/main.css
@@ -746,11 +746,11 @@ MEDIA QUERY
     border-bottom: 2px solid #9b2557;
   }
 
-  h1 {
+/*   h1 {
 
     font-size: 12.8vw;
 
-}
+} */
 
     /* IPAD RICH TXT FOTKA */
     .alignleft, img.alignleft, .alignone {
