--- a/main.css
+++ b/main.css
@@ -730,7 +730,7 @@ MEDIA QUERY
 */
 
 @media (max-width: 479px) {
-  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap {
+  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .contactwrap  {
     border-top: 2px solid #9b2557;
   }
   
@@ -800,7 +800,7 @@ MEDIA QUERY
  
 @media (min-width: 480px) and (max-width:999px) {
 
-  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap,  .claniceminigrid {
+  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap,  .claniceminigrid, .contactwrap {
     border-top: 2px solid #9b2557;
   }
   
@@ -849,7 +849,7 @@ MEDIA QUERY
 }
   @media (min-width: 1000px) and (max-width:1199px) {
 
-    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid  {
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid, .contactwrap  {
       border-top: 3px solid #9b2557;
     }
     
@@ -882,7 +882,7 @@ MEDIA QUERY
   @media (min-width: 1200px) and (max-width:1599px) {
 
 
-    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid  {
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid, .contactwrap  {
       border-top: 3px solid #9b2557;
     }
     
@@ -915,7 +915,7 @@ MEDIA QUERY
   border-bottom: solid 3px #9b2557;
 }
 
-    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid  {
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid, .contactwrap  {
       border-top: 4px solid #9b2557;
     }
     
@@ -950,7 +950,7 @@ MEDIA QUERY
       border-bottom: solid 4px #9b2557;
     }
 
-    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid  {
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid, .contactwrap  {
       border-top: 5px solid #9b2557;
     }
     
@@ -977,7 +977,7 @@ MEDIA QUERY
       border-bottom: solid 4px #9b2557;
     }
     
-    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid    {
+    .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap, .claniceminigrid, .contactwrap    {
       border-top: 5px solid #9b2557;
     }
     
