--- a/main.css
+++ b/main.css
@@ -1352,3 +1352,9 @@ margin-bottom: 0.5em;
     padding: 0.850em 4.3em !important; 
 } 
 }
+
+@media (min-width: 991px) and (max-width:1300px) {
+.richsubmeni {
+  margin-top: 0.3em;
+}
+}
