--- a/main.css
+++ b/main.css
@@ -1365,8 +1365,18 @@ margin-bottom: 0.5em;
   }
   .subitem.submargin {
     margin-bottom: 0.4em;
-    
-}
+    }
+
+      /*HOMEPAGE SUBMENU*/
+      .tabwrap {
+        margin-bottom: 0.6em;
+      }
+      .tabs-menu {
+        margin-top: 0.35em;
+      }
+
+
+
   }
 
   @media (max-width: 992px) {
