--- a/main.css
+++ b/main.css
@@ -931,11 +931,11 @@ MEDIA QUERY
     }
     
    /*SUBMENI HOME*/ 
-   .tabwrap {
+  /*  .tabwrap {
   
       margin-bottom: -0.09em;
     
-  }
+  } */
 
 
 
