--- a/main.css
+++ b/main.css
@@ -798,7 +798,7 @@ MEDIA QUERY
 
 
  
-@media (min-width: 480px) and (max-width:999px) {
+@media (max-width:999px) {
 
   .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap,  .claniceminigrid, .contactwrap {
     border-top: 3px solid #9b2557;
