--- a/main.css
+++ b/main.css
@@ -793,12 +793,22 @@ MEDIA QUERY
 
 
 
+@media (max-width: 479px) {
+  .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap,  .claniceminigrid, .contactwrap {
+    border-top: 3px solid #9b2557;
+  }
+  
+  .child:nth-last-child(1) .newname, .newswrap:nth-last-child(-n+3), .claniceminigrid:nth-last-child(-n+3),
+ .contactwrap:nth-last-child(-n+4), .search-grid-auto:nth-last-child(1)  {
+    border-bottom: 3px solid #9b2557;
+  }
 
+}
 
 
 
  
-@media (max-width:999px) {
+@media (min-width: 480px) and (max-width:999px) {
 
   .child:nth-child(1) .newname, .search-grid-auto:nth-child(1), .newswrap,  .claniceminigrid, .contactwrap {
     border-top: 3px solid #9b2557;
