--- a/main.css
+++ b/main.css
@@ -739,11 +739,11 @@ MEDIA QUERY
     border-bottom: 2px solid #9b2557;
   }
 
-/*   h1 {
+   h1 {
 
-    font-size: 12.8vw;
+    font-size: 14vw;
 
-} */
+} 
 
     /* IPAD RICH TXT FOTKA */
     .alignleft, img.alignleft, .alignone {
