--- a/main.css
+++ b/main.css
@@ -1016,6 +1016,14 @@ MEDIA QUERY
 }
   }
 
+  @media (min-width: 476px) and (max-width:991px) {
+    h1 {
+      font-size: 30vw;
+  
+  }
+
+  }
+
 /*
 ================================================================================
 KILL FOCUS ON ALL BUT WITH ACCESIBILITY
