--- a/main.css
+++ b/main.css
@@ -367,6 +367,12 @@ IMAGE PROPORTIONAL
   }
 
 
+  /*DELETE*/
+
+  .horizontalyyy{
+    width: calc(12em*29.7/21);
+ 
+  }
 
 /*
 ================================================================================
