--- a/main.css
+++ b/main.css
@@ -366,6 +366,15 @@ IMAGE PROPORTIONAL
  
   }
 
+  .verticaly{
+    width: calc(3em*21/29.7);
+ 
+  }
+  
+  .horizontaly{
+    width: calc(3em*29.7/21);
+ 
+  }
 
 
 
