--- a/main.css
+++ b/main.css
@@ -1456,3 +1456,11 @@ margin-bottom: 0.5em;
     
       }
     }
+
+
+    @media screen and (max-width: 767px) {
+.mobile-menu-content, .section, .overlayx {
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+}
+    }
