--- a/main.css
+++ b/main.css
@@ -1464,3 +1464,23 @@ margin-bottom: 0.5em;
     padding-right: 1.5em;
 }
     }
+
+
+    @media (min-width: 480px) and (max-width:767px) {
+
+      _00820dfd-3a36-be78-7e07-6ec89ffee8b8-9ffee8ac {
+        -ms-grid-column-span: 7;
+        grid-column-end: 6;
+        -ms-grid-column: 1;
+        grid-column-start: 3;
+        -ms-grid-row-span: 1;
+        grid-row-end: 1;
+        -ms-grid-row: 2;
+        grid-row-start: 1;
+        -ms-grid-row-align: start;
+        align-self: center;
+    }
+    
+
+
+    }
