--- a/main.css
+++ b/main.css
@@ -1475,6 +1475,9 @@ margin-bottom: 0.5em;
         height: 100vh;
     }
 
+    .mobilenav {
+      margin-top: 12em;
+  }
 
       #w-node-_00820dfd-3a36-be78-7e07-6ec89ffee8b8-9ffee8ac {
         -ms-grid-column-span: 7;
