--- a/main.css
+++ b/main.css
@@ -566,10 +566,10 @@ input[type="submit" i] {
 }
 
 /*SEARCH BUTTON POSITION*/
-.div-block-2 {
+/* .div-block-2 {
   top: 1.3em!important;
     right: -3em!important;
- }
+ } */
 
 
 /*
