--- a/main.css
+++ b/main.css
@@ -129,11 +129,11 @@ MENU
 */
   
 .underline::before {
-    content: "";
+    content: "X";
     border-bottom: solid 3px #9b2557;
    position: absolute;
-   bottom: 45%;
-    left: -1.25em;
+ /*   bottom: 45%;
+    left: -1.25em; */
     width: 1em;
     
     
@@ -713,9 +713,9 @@ p {
       color: white;
     }
 */
-    .nav-link.w-inline-block.current-page-item:before {
+   /*  .nav-link.w-inline-block.current-page-item:before {
       border-bottom: solid 2px #9b2557;
-      }
+      } */
    
 
     /*
@@ -910,9 +910,9 @@ MEDIA QUERY
 
 
 
-    .nav-link.w-inline-block.w--current:before, .underline::before {
+    /* .nav-link.w-inline-block.w--current:before, .underline::before {
       border-bottom: solid 3px #9b2557;
-    }
+    } */
    
     .swiper-pagination-bullet {
       height: 3px;
